rendered/envs/demo/argocd/ingressroute-argocd-server-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  annotations:
    a8r.io/repository: https://github.com/kbudde/k8s-demo
    external-dns.alpha.kubernetes.io/target: lb.demo.budd.ee
    kubernetes.io/ingress.class: traefik
  name: argocd-server-route
  namespace: argocd
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`argocd.demo.budd.ee`)
      priority: 10
      services:
        - name: argocd-server
          port: 443
          scheme: https
          serversTransport: insecure-skip-verify
    - kind: Rule
      match: Host(`argocd.demo.budd.ee`) && Header(`Content-Type`, `application/grpc`)
      priority: 11
      services:
        - name: argocd-server
          port: 443
          scheme: h2c
          serversTransport: insecure-skip-verify
